[gd_scene format=3]

[ext_resource type="Script" path="res://ui/Pause.gd" id="1"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Техническая пауза"

[node name="StateLine" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "state"

[node name="PlayersList" type="ItemList" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueBtn" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Продолжить"

[node name="NewGameBtn" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Новая игра"

[node name="AdminBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AdminBtn" type="Button" parent="VBox/AdminBox"]
custom_minimum_size = Vector2(140, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Admin"

[node name="AdminPass" type="LineEdit" parent="VBox/AdminBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
size_flags_horizontal = 3
placeholder_text = "Введите пароль (видимый)"

[node name="AdminStatus" type="Label" parent="VBox/AdminBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
modulate = Color(0.9, 0.9, 0.7, 1)
text = ""

[node name="AdminActions" type="HBoxContainer" parent="VBox"]
layout_mode = 2
visible = false
theme_override_constants/separation = 12

[node name="UndoBtn" type="Button" parent="VBox/AdminActions"]
custom_minimum_size = Vector2(180, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Undo"

[node name="ReverseBtn" type="Button" parent="VBox/AdminActions"]
custom_minimum_size = Vector2(180, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Reverse"
